--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Document</title>
+    <title>Fete</title>
   </head>
   <body>
     <div id="root"></div>
