--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="shortcut icon" href="favicon/favicon_io/favicon-32x32.png">
 
     <title>Fete</title>
   </head>
